--- a/Infinito-Qs/QuestionManagement/public/stylesheets/QuestionManager.css
+++ b/Infinito-Qs/QuestionManagement/public/stylesheets/QuestionManager.css
@@ -107,3 +107,27 @@ h1 {
 .checkbox label {
   margin-right: 10px;
 }
+
+.slide.animate-enter,
+.slide.animate-leave
+{
+    -webkit-transition: 325ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+    -moz-transition: 325ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+    -ms-transition: 325ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+    -o-transition: 325ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+    transition: 325ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+}
+
+.slide.animate-enter {
+    left: 100%;
+}
+.slide.animate-enter.animate-enter-active {
+    left: 0;
+}
+
+.slide.animate-leave {
+    left: 0;
+}
+.slide.animate-leave.animate-leave-active{
+    left: -100%;
+}
