--- a/Infinito-Qs/QuestionManagement/public/stylesheets/QuestionManager.css
+++ b/Infinito-Qs/QuestionManagement/public/stylesheets/QuestionManager.css
@@ -116,7 +116,6 @@ h1 {
 .allow-overflow{
   overflow:visible;
 }
-
 .pickedInTournament{
   background-color: #d9534f;
 }
@@ -138,4 +137,8 @@ h1 {
   border: 1px solid rgba(0, 0, 0, .2);
   padding: 5px 5px;
   margin-right: 5px;
+}
+
+.tooltipWrap{
+  position:relative;
 }
