--- a/Infinito-Qs/QuestionManagement/public/stylesheets/QuestionManager.css
+++ b/Infinito-Qs/QuestionManagement/public/stylesheets/QuestionManager.css
@@ -146,3 +146,15 @@ h1 {
 .tooltipWrap{
   position:relative;
 }
+
+
+.modal-dialog{
+    overflow-y: initial !important
+}
+.modal-body{
+    height: 575px;
+    overflow-y: auto;
+}
+.ng-toast {
+  z-index: 7000;
+}
